<resources>
    <string name="app_name">物流管家婆</string>
    <string name="title_activity_login">登录</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="title">提示</string>
    <string name="callphone">是否要拨打电话15988879319?</string>
    <string name="phonenum">tel:15988879319</string>
    <string name="relogin">帐户在其它地方被登录，是否需要强制登录？</string>

    <string name="tab_main">首页</string>
    <string name="tab_two">基础数据</string>
    <string name="tab_three">业绩</string>
    <string name="tab_four">设置</string>
    <string name="create">新建</string>
    <string name="shrlist">收货人列表</string>
    <string name="subscribe">预约运单</string>
    <string name="orderinfo">运单详情</string>
    <string name="fwhy">服务及费用</string>
    <string name="newly">新开运单</string>
    <string name="fhrlist">发货人列表</string>
    <string name="fhdlist">发货点列表</string>
    <string name="mddlist">目的地列表</string>
    <string name="requestper">请同意权限</string>
    <string name="gys">供应商</string>
    <string name="search">搜索</string>
    <string name="tozs">转正式单</string>
    <string name="delete">删除</string>
    <string name="carnum">车次</string>
    <string name="more">更多</string>
    <string name="histroy">运单记录</string>
    <string name="set_pring_type">设置打印模板</string>
    <string name="set_pring">配置打印机</string>
    <string name="save">保存</string>
    <string name="addmember">添加员工</string>
    <string name="membermanager">员工管理</string>
    <string name="install">添加</string>
    <string name="editcompanyname">编辑公司名称</string>
    <string name="contacts">添加联系人</string>
    <string name="changecontacts">修改联系人</string>
    <string name="changeadd">修改地区</string>
    <string name="addaddress">添加地区</string>
    <string name="perference">清单设置</string>
    <string name="share">分享</string>
    <string name="changeorderstatus">请选择运单状态</string>

    <string-array name="print">
        <item>58mm</item>
        <item>80mm</item>
        <item>110mm</item>
        <item>针式210mm</item>
        <item>AirPrint210mm</item>
    </string-array>

    <string-array name="printtype">
        <item>热敏小票</item>
        <item>详细小票</item>
        <item>广隆物流</item>
        <item>申通快递</item>
        <item>圆通快递</item>
        <item>自定义快递</item>
    </string-array>
    <string-array name="printtypes">
        <item>75*100一式多份便签</item>
        <item>75*50表格便签</item>
        <item>75*100一式一份便签</item>
    </string-array>
    <string-array name="alert">
        <item>是</item>
        <item>否</item>
    </string-array>

    <string-array name="homedata">
        <item>新开运单</item>
        <item>运单记录</item>
        <item>批量操作</item>
        <item>微信运单</item>
    </string-array>
    <string-array name="basedata">
        <item>收货人</item>
        <item>发货人</item>
        <item>目的地</item>
        <item>发货点</item>
        <item>供应商</item>
        <item>车次</item>
    </string-array>

    <string-array name="setdata">
        <item>公司设置</item>
        <item>员工管理</item>
        <item>打印设置</item>
        <item>偏好设置</item>
        <item>电子面单打印机购买</item>
        <item>升级会员</item>
        <item>分享</item>
        <item>联系客服</item>
        <item>修改密码</item>
        <item>安全退出</item>
    </string-array>

    <string-array name="listdialog">
        <item>按月查看</item>
        <item>按日查看</item>
    </string-array>

    <string-array name="recwaytype">
        <item>自提</item>
        <item>派送</item>
    </string-array>

    <string-array name="alertmenu">
        <item>修改</item>
        <item>删除</item>
    </string-array>

    <string-array name="paytype">
        <item>现付</item>
        <item>月结</item>
        <item>提付</item>
    </string-array>

    <string-array name="perferencedata">
        <item>汇总导出清单设置</item>
        <item>新建运单默认设置</item>
    </string-array>

    <string-array name="hzdata">
        <item>序号</item>
        <item>单号</item>
        <item>快递单号</item>
        <item>日期</item>
        <item>修改时间</item>
        <item>车次</item>
        <item>发货点</item>
        <item>发货人</item>
        <item>目的地</item>
        <item>收货人</item>
        <item>货物名称</item>
        <item>件数</item>
        <item>重量</item>
        <item>体积</item>
        <item>中转费</item>
        <item>保费</item>
        <item>应收运费</item>
        <item>成本</item>
        <item>利润</item>
        <item>供应商</item>
        <item>支付</item>
        <item>已付</item>
        <item>欠款</item>
        <item>代收款</item>
        <item>小计</item>
        <item>业务员</item>
        <item>返款</item>
        <item>回单份数</item>
        <item>通知放货</item>
        <item>备注</item>
        <item>提货人签名</item>
    </string-array>

    <string-array name="waybillcontrol">
        <item>修改状态</item>
        <item>收款结帐</item>
    </string-array>

    <string-array name="waybillhistroy">
        <item>打印便签</item>
        <item>打印小票</item>
        <item>汇总打印</item>
    </string-array>

    <string-array name="bzdw">
        <item>纸箱</item>
        <item>木箱</item>
        <item>编织袋</item>
        <item>托盘</item>
        <item>缠绕膜</item>
        <item>其它包装</item>
    </string-array>
    <string-array name="orderstatus">
        <item>待装车</item>
        <item>运输中</item>
        <item>已到站</item>
        <item>已提货</item>
        <item>已收款</item>
        <item>已打款</item>
        <item>已开票</item>
    </string-array>

    <string name="prompt_email">请输入手机号</string>
    <string name="prompt_password">请输入密码</string>
    <string name="prompt_verfiycode">请输入验证码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_verfiy_code">发送验证码</string>
    <string name="action_register">立即注册</string>
    <string name="action_forget">忘记密码</string>
    <string name="msg_app_exit">再按一次退出应用</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_submit">提交</string>
    <string name="action_inquire">查询</string>
    <string name="action_reset">重置</string>
    <string name="alert_phone_error">手机号格式不正确</string>
    <string name="error_phone_empty">手机号不能为空</string>
    <string name="error_email_empty">帐号不能为空</string>
    <string name="error_name_empty">名字不能为空</string>
    <string name="error_password_empty">密码不能为空</string>
    <string name="error_company_empty">公司名称不能为空</string>
    <string name="register_ok">注册成功</string>
    <string name="error_address_empty">地址信息不能为空</string>
    <string name="error_password_length">密码长度不能小于6位或大于16位</string>
    <string name="payaccount">购买会员</string>
    <string name="perfersetting">偏好设置</string>

    <string name="title_paired_devices">Paired</string>
    <string name="title_other_devices">New</string>
    <string name="scan">Scan</string>
    <string name="bluetooth_device_list">Bluetooth device list</string>
    <string name="select_bluetooth_device">select bluetooth device</string>
    <string name="none_bluetooth_device_found">none bluetooth device found</string>
    <string name="none_paired">none paired</string>
    <string name="scaning">scaning</string>
    <string name="usb_devices_list">USB devices list</string>
    <string name="none_usb_device">none usb device connected</string>

    <string-array name="baudrate">
        <item>4800</item>
        <item>9600</item>
        <item>19200</item>
        <item>38400</item>
        <item>115200</item>
    </string-array>
    <string name="str_no_serialport">Do not support serial port</string>
    <string name="str_conn_state_disconnect">Connection state: unconnected</string>
    <string name="str_conn_state_connecting">Connection state: connecting</string>
    <string name="str_connecting">connecting</string>
    <string name="str_conn_state_connected">Connection state: connected</string>
    <string name="str_wifi_ip">Please enter IP:</string>
    <string name="str_ip">IP: </string>
    <string name="str_port">Port: </string>
    <string name="str_wifi_port">Please enter the port:</string>
    <string name="str_state_query">State query</string>
    <string name="str_mode_change">Printmode change</string>
    <string name="str_disconnect">Disconnect</string>
    <string name="str_label_print">Label print</string>
    <string name="str_receipt_print">Receipt print</string>
    <string name="str_cpcl_print">CPCL print</string>
    <string name="str_bluetooth_connect">Bluetooth</string>
    <string name="str_usb_connect">USB</string>
    <string name="str_wifi_connect">wifi</string>
    <string name="str_serialport_connect">Serial port</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_cann_printer">Please connect the printer first</string>
    <string name="str_bluetooth">Bluetooth</string>
    <string name="str_serialport">Serial port</string>
    <string name="str_usb">USB</string>
    <string name="str_wifi">WIFI</string>
    <string name="str_conn_successful">The connection is successful!</string>
    <string name="str_conn_fail">The connection failed!</string>
    <string name="str_baudrate">Baud rate:</string>
    <string name="str_serialport_path">Serial port path:</string>
    <string name="str_conn_devices">Multi-devices</string>
    <string name="str_conn_receipt_and_label_continuity_print">Continuous print</string>
    <string name="str_address">Address:</string>
    <string name="gprinter001">Printer 001</string>
    <string name="gprinter002">Printer 002</string>
    <string name="gprinter003">Printer 003</string>
    <string name="gprinter004">Printer 004</string>
    <string name="disconnect">Disconnect</string>
    <string name="cut">Unconnected</string>
    <string name="cutting">Disconnect the connection.</string>
    <string name="str_disconn">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="port">Interface: not set</string>
    <string name="init_port_info">Address: unknown</string>
    <string name="str_enter_print_counts">Please enter the number of Prints:</string>
    <string name="str_choice_printer_command">Please select the correct printer instructions</string>
    <string name="str_printer_conn_normal">Printer connected normal</string>
    <string name="str_printer_out_of_paper">Printer out of paper</string>
    <string name="str_printer_open_cover">Printer open cover</string>
    <string name="str_printer_error">Printer error</string>
    <string name="str_state">State: </string>
    <string name="str_interface_undefine">Interface: Undefine</string>
    <string name="str_select_printer_id">Select a printer with a ID of {0}</string>
    <string name="bluetooth_is_not_enabled">bluetooth is not enabled</string>
    <string-array name="str_interf_type">
        <item>Bluetooth</item>
        <item>Ethernet</item>
        <item>USB</item>
    </string-array>
    <string name="str_cpclmode">Cpcl Mode</string>
    <string name="str_escmode">Receipt Mode</string>
    <string name="str_tscmode">Label Mode</string>
    <string name="str_synchronous_print">Synchronous Print</string>
    <string name="str_printer_printmode_esc">Print Mode:ESC</string>
    <string name="str_printer_printmode_tsc">Print Mode:TSC</string>
    <string name="str_printer_printmode_cpcl">Print Mode:CPCL</string>
    <string name="str_continuityprinter">Continuity Printer</string>
    <string name="str_continuity_count">Continuity Print Count Null</string>
    <string name="str_stop_continuityprint">Stop Continuity Print</string>
    <string name="str_stop_continuityprint_success">Stop Continuity Print Success</string>
    <string name="str_disconnect_success">Disconnect Success</string>
    <string name="str_title_newdev">new</string>
    <string name="str_title_pairedev">paire</string>
    <string name="str_tv_printcount">print counts:</string>
    <string name="str_print_selftest">Print Selftest</string>
    <string name="str_print_xml">Print Xml</string>

</resources>
