<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="物流管家婆"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_30"
                android:textSize="@dimen/sp_24"
                android:textColor="@color/orger"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="手机发货更方便"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/sp_15"
                android:textColor="@color/black"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_20"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:orientation="vertical">

            <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"/>


            <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>


            <CheckBox
                    android:id="@+id/cbSavePass"
                    android:text="记住密码"
                    android:layout_gravity="right"
                    android:checked="true"
                    android:textColor="@color/actionbar_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/actionbar_color"
                    android:textColor="@color/white"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in"/>

            <TextView
                    android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:textColor="@color/actionbar_color"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:layout_gravity="right"
                    android:text="帐号注册>>"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="@dimen/dp_10"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:text="软件客服电话"
                android:layout_marginRight="@dimen/dp_5"
                android:textColor="@color/actionbar_color"
                android:id="@+id/tvCallPhone"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="wrap_content"
                android:text="客户QQ:37688599"
                android:textColor="@color/actionbar_color"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_height="wrap_content"
                android:id="@+id/tvQQ"/>
    </LinearLayout>

</RelativeLayout>